--- a/views/register.html
+++ b/views/register.html
@@ -97,6 +97,24 @@
                     <input type = "checkbox" name= "category"
                     value="moda">
                 </div>
+                <div>
+                    <label>
+                        Hogar
+                    <input type = "checkbox" name= "category"
+                    value="moda">
+                </div>
+                <div>
+                    <label>
+                        Jugueteria
+                    <input type = "checkbox" name= "category"
+                    value="moda">
+                </div>
+                <div>
+                    <label>
+                        Vida sana
+                    <input type = "checkbox" name= "category"
+                    value="moda">
+                </div>
             </div>
             <div>
                 <label for="foto de perfil">
