--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -13,6 +13,11 @@ div.top-header{
     display: flex;
     flex-wrap:wrap;
 }
+.barra{
+    display: inline-block;
+    width: 50%;
+    height: 35px;
+}
 
 div.burger-menu{
     text-align: center;
@@ -37,7 +42,7 @@ div.burger-menu i:hover{
 
 
 p{
-    font-size: 12px;
+    font-size: 13px;
 }
 
 h3{
@@ -50,7 +55,17 @@ header{
 
 header img,
 header form{
-    width: 50%;
+    width: 40%;
+}
+.header-bottom-bar{
+    display:flex;
+    justify-content: space-between;    
+}
+.header-bottom-bar ul {
+    display: flex;
+}
+.header-bottom-bar li {
+    margin: 0 5px;
 }
 
 header ul li{
@@ -60,6 +75,9 @@ header ul li{
 header ul li a{
     text-decoration: none;
     color: #000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 div.last-visit,
@@ -123,7 +141,10 @@ main section article{
 
 main section article img{
     display: block;
-    width: 100%;
+    width: 50%;
+    height: 50%;
+    display: flex;
+    justify-content: center;
 }
 
 main section article i,
@@ -154,13 +175,17 @@ footer{
 
 footer article{
     margin: 20px 0px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+
 }
 
 footer i{
     color: #1259c3;
 }
 
-/* propio de los formularios */
 
 .login input,
 .register input{
@@ -169,6 +194,7 @@ footer i{
     margin: 20px 0px;
     border-radius: 5px;
     border: 0px;
+
 }
 
 .login input[type='submit'],
@@ -186,6 +212,7 @@ footer i{
 .register input[type='reset']{
     color: #FFF;
     background-color: #AA0044;
+    border-color: magenta;
 }
 
 .register input[type='reset']:hover{
