--- a/views/index.html
+++ b/views/index.html
@@ -14,33 +14,36 @@
     <header>
         <div class="top-header">
             <img src="images/logo-mercado-liebre.svg" alt="Logo de MercadoLiebre">
-            <p> LUGAR PARA PONER LA BARRA DE BUSQUEDA</p>
+            <form class="buscador" action="#" method="GET">
+                <input type="search" placeholder="Buscar productos, marcas y más" name="search" class="barra">
+                <button type="submit"><i class="fa fa-search"></i></button>
+            </form>
             <p><i class="fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta de crédito</p>
         </div>
         <div class="burger-menu">
             <i class="fa fa-bars burger"></i>
         </div>
-        <nav>
-            <ul>
+        <nav class="header-bottom-bar">
+            <ul class="left-navabar">
                 <li><a href="#">Ofertas</a></li>
                 <li><a href="#">Tiendas Oficiales</a></li>
                 <li><a href="#">Vender</a></li>
                 <li><a href="#">Ayuda</a></li>
             </ul>
-            <ul>
+            <ul class="right-navabar">
                 <li><a href="/register">Creá tu cuenta <i class="far fa-id-card"></i></a></li>
                 <li><a href="/login">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
                 <li><a href="#">Mis compras <i class="fas fa-shopping-basket"></i></a></li>
             </ul>
         </nav>
-    </header>
+        </header>
     <section class="banner">
         <img src="images/img-home-banner.jpg" alt="Banner de ofertas">
     </section>
     <main>
         <section class="last-visit">
             <h3>Basado en tu última visita</h3>
-            <article>
+            <article class="article-container">
                 <img src="images/img-cafetera-moulinex.jpg" alt="Cafetera" class="product_img">
                 <div class="main-article">
                     <i class="fas fa-truck"></i>
@@ -49,7 +52,7 @@
                     <h4 class="description">Cafetera Moulinex</h4>
                 </div>
             </article>
-            <article>
+            <article class="article-container">
                 <img src="images/img-macbook-pro-2019.jpg" alt="MacBook" class="product_img">
                 <div class="main-article">
                     <i class="fas fa-truck"></i>
@@ -58,7 +61,7 @@
                     <h4 class="description">MacBook Pro 2019</h4>
                 </div>
             </article>
-            <article>
+            <article class="article-container">
                 <img src="images/img-samsung-galaxy-s10.jpg" alt="Teléfono Móvil Samsung Galaxy" class="product_img">
                 <div class="main-article">
                     <i class="fas fa-truck"></i>
@@ -67,7 +70,7 @@
                     <h4 class="description">Teléfono móvil Samsung Galaxy S10</h4>
                 </div>
             </article>
-            <article>
+            <article class="article-container">
                 <img src="images/img-tv-samsung-smart.jpg" alt="SmartTv Samsung" class="product_img">
                 <div class="main-article">
                     <i class="fas fa-truck"></i>
@@ -79,7 +82,7 @@
         </section>
         <section class="offers">
             <h3>Ofertas</h3>
-            <article>
+            <article class="article-container">
                 <img src="images/img-cafetera-moulinex.jpg" alt="Cafetera" class="product_img">
                 <div class="main-article">
                     <i class="fas fa-truck"></i>
@@ -88,7 +91,7 @@
                     <h4 class="description">Cafetera Moulinex</h4>
                 </div>
             </article>
-            <article>
+            <article class="article-container">
                 <img src="images/img-macbook-pro-2019.jpg" alt="MacBook" class="product_img">
                 <div class="main-article">
                     <i class="fas fa-truck"></i>
@@ -97,7 +100,7 @@
                     <h4 class="description">MacBook Pro 2019</h4>
                 </div>
             </article>
-            <article>
+            <article class="article-container">
                 <img src="images/img-samsung-galaxy-s10.jpg" alt="Teléfono Móvil Samsung Galaxy" class="product_img">
                 <div class="main-article">
                     <i class="fas fa-truck"></i>
@@ -106,7 +109,7 @@
                     <h4 class="description">Teléfono móvil Samsung Galaxy S10</h4>
                 </div>
             </article>
-            <article>
+            <article class="article-container">
                 <img src="images/img-tv-samsung-smart.jpg" alt="SmartTv Samsung" class="product_img">
                 <div class="main-article">
                     <i class="fas fa-truck"></i>
